# ai-agents-brennantechnologies

./: .env.example  .gitignore  LazyGit.ps1  README.md  pyproject.toml  requirements.txt
ai_agents/: __init__.py  config.py  main.py
ai_agents/agents/: __init__.py  base_agent.py  code_review_agent.py  orchestrator.py  research_agent.py  tool_calling_agent.py
ai_agents/llm/: __init__.py  anthropic_wrapper.py  base.py  factory.py  local_wrapper.py  openai_wrapper.py
ai_agents/rag/: __init__.py  document_processor.py  pipeline.py  retriever.py  vector_store.py
ai_agents/tools/: __init__.py  code_executor.py  memory_store.py  vector_memory.py  web_search.py
ai_agents/workflows/: __init__.py  graph.py  langgraph_style.py
examples/: run_base_agent.py  run_code_review.py  run_multi_agent_workflow.py  run_rag_pipeline.py  run_research_agent.py
