[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-brennantechnologies"
version = "0.1.0"
description = "A modular AI agent framework with RAG, workflows, and provider-agnostic LLM integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.35.0",
  "anthropic>=0.31.0",
  "ddgs>=9.0.0",
  "python-dotenv>=1.0.1"
]

[tool.setuptools.packages.find]
include = ["ai_agents*"]
